--- a/media/css/upload.css
+++ b/media/css/upload.css
@@ -13,7 +13,8 @@
 }
 
 .upload {
-  background-color: #fafbfc;
+  background-color: var(--main-bg);
+  color: var(--body-color);
   border: 1px dashed #999;
   box-sizing: border-box;
   transition: all 0.2s ease 0s;
@@ -36,15 +37,15 @@
   height: auto;
   margin: 0;
   line-height: 175%;
-  color: #999;
+  color: var(--secondary);
   transition: all 0.2s;
 }
 .upload p.lead {
-  color: #999;
+  color: var(--secondary);
 }
 .upload.hover {
-  border-color: #666;
-  background-color: #eee;
+  border-color: var(--bg-reverted);
+  background-color: var(--body-bg);
 }
 .upload[data-state=pending] .upload__progress {
   display: none;
